[gd_scene load_steps=13 format=2]

[ext_resource path="res://res/ClearSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ColorController.gd" type="Script" id=2]
[ext_resource path="res://GameStateManager.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_bottom = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
Label/fonts/font = SubResource( 3 )
RichTextLabel/fonts/normal_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
Button/fonts/font = SubResource( 6 )

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 17

[node name="Title" type="Label" parent="Control"]
margin_right = 720.0
margin_bottom = 106.0
theme = SubResource( 2 )
text = "COLORDLE"
align = 1
valign = 1

[node name="Directions" type="Label" parent="Control"]
margin_top = 123.0
margin_right = 720.0
margin_bottom = 154.0
theme = SubResource( 5 )
text = "Guess the RGB values of the color in the square below within 6 tries."
align = 1

[node name="ColorSwatch" type="ColorRect" parent="Control"]
unique_name_in_owner = true
margin_left = 185.0
margin_top = 171.0
margin_right = 535.0
margin_bottom = 521.0
rect_min_size = Vector2( 350, 350 )
size_flags_horizontal = 4

[node name="Guesses" type="VBoxContainer" parent="Control"]
margin_top = 538.0
margin_right = 720.0
margin_bottom = 538.0

[node name="Answer" type="Label" parent="Control"]
margin_top = 1088.0
margin_right = 720.0
margin_bottom = 1130.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 9 )
align = 1

[node name="WinMsg" type="Label" parent="Control"]
margin_top = 1147.0
margin_right = 720.0
margin_bottom = 1189.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = SubResource( 9 )
align = 1

[node name="Button" type="Button" parent="Control"]
margin_top = 1206.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 5
size_flags_vertical = 8
theme = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
text = "Guess!"

[connection signal="button_up" from="Control/Button" to="GameStateManager" method="_on_Button_button_up"]
